Added colour sliders to change the palette
Note: still needs things to be added to the save function in order to
save the palette.

--- a/SDL_Fractal.cbp
+++ b/SDL_Fractal.cbp
@@ -47,6 +47,8 @@
 			<Add library="SDL_gfx_VS2008" />
 			<Add library="SDL_ttf" />
 		</Linker>
+		<Unit filename="Slider.cpp" />
+		<Unit filename="Slider.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
