--- a/SDL_Fractal.cbp
+++ b/SDL_Fractal.cbp
@@ -7,12 +7,15 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin\Debug\SDL_Fractal" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\Debug\" />
+				<Option output="bin/Debug/SDL_Fractal" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Debug/" />
 				<Option type="0" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add directory="C:/lib/SDL-1.2.15/include" />
+					<Add directory="C:/lib/SDL_ttf-2.0.11/include" />
+					<Add directory="C:/lib/SDL_gfx-2.0.23" />
 				</Compiler>
 				<Linker>
 					<Add library="mingw32" />
@@ -20,11 +23,14 @@
 					<Add library="SDL" />
 					<Add library="SDL_ttf" />
 					<Add library="SDL_gfx_VS2008" />
+					<Add directory="C:/lib/SDL-1.2.15/lib" />
+					<Add directory="C:/lib/SDL_ttf-2.0.11/lib/x86" />
+					<Add directory="C:/lib/SDL_gfx-2.0.23" />
 				</Linker>
 			</Target>
 			<Target title="Release">
-				<Option output="bin\Release\SDL_Fractal" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\Release\" />
+				<Option output="bin/Release/SDL_Fractal" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Release/" />
 				<Option type="0" />
 				<Option compiler="gcc" />
 				<Compiler>
